crates/tui/tests/storybook/snapshots/app_tool::streaming_tool_draft_syntax_highlighting.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 78 14
  0   0   1 fg=AnsiValue(8)
  0   1  11 attrs=dim
  1   2   3 fg=AnsiValue(244)
  1   7   3 fg=Rgb { r: 249, g: 38, b: 114 }
  1  10   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  11   2 fg=Rgb { r: 102, g: 217, b: 239 }
  1  13   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  14   4 fg=Rgb { r: 166, g: 226, b: 46 }
  1  18   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  19   4 fg=Rgb { r: 253, g: 151, b: 31 }
  1  23   2 fg=Rgb { r: 248, g: 248, b: 242 }
  1  25   1 fg=Rgb { r: 249, g: 38, b: 114 }
  1  26   3 fg=Rgb { r: 102, g: 217, b: 239 }
  1  29  13 fg=Rgb { r: 248, g: 248, b: 242 }
  2   2   3 fg=AnsiValue(244)
  2   7  12 fg=Rgb { r: 248, g: 248, b: 242 }
  2  19   8 fg=Rgb { r: 230, g: 219, b: 116 }
  2  27   6 fg=Rgb { r: 190, g: 132, b: 255 }
  2  33   1 fg=Rgb { r: 230, g: 219, b: 116 }
  2  34   1 fg=Rgb { r: 248, g: 248, b: 242 }
  4   0   1 fg=AnsiValue(8)
  4   1   5 attrs=dim
  4   7  10 fg=Rgb { r: 255, g: 255, b: 255 }
  4  17   3 fg=Rgb { r: 253, g: 151, b: 31 }
  4  20  22 fg=Rgb { r: 255, g: 255, b: 255 }
  4  42   3 fg=Rgb { r: 249, g: 38, b: 114 }
  4  45  12 fg=Rgb { r: 255, g: 255, b: 255 }
 10   0   1 fg=AnsiValue(237)
 10   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 10   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 10   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 10   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 10   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 10   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 10   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 10   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 10   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 10  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 10  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 10  13  65 fg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 12   0  78 fg=AnsiValue(237)
 13   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 13  10  60 bg=AnsiValue(233)
 13  70   8 fg=AnsiValue(244) bg=AnsiValue(233)
