crates/tui/tests/storybook/snapshots/app_tool::switch_cwd_tool_expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* switch_cwd /repo/.worktrees/native-worktree-support





─ ✿ working… ─────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                     1:1 100%
