crates/tui/tests/storybook/snapshots/app_tool::tool_block_parallel_pending.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
⏺ read_file a.rs
  0 lines

⏺ read_file b.rs
  0 lines



─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal
