crates/tui/tests/storybook/snapshots/app_tool::tool_block_pending_no_result.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 384
expression: frame.text()
---
* bash sleep 5  (timeout: 2m 0s)



─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
