crates/tui/tests/storybook/snapshots/app_tool::tool_call_then_result_pair.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
⏺ read_file
  1 lines








─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
