crates/tui/tests/storybook/snapshots/app_tool::tool_elapsed_timer_preserves_decimal_padding.fractional_second.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* read_file timer.rs  1.2s                                     14:37:03
  0 lines






─ ✿ working… 1s ────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
